--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "apollo-server-express": "^2.11.0",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
     "stripe": "^8.138.0"
   },
   "devDependencies": {
